[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/FlamethrowerEpic.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Flamethrower.gd" type="Script" id=2]
[ext_resource path="res://SFX/flame1.wav" type="AudioStream" id=3]

[sub_resource type="CapsuleShape" id=1]
radius = 2.3564
height = 7.10494

[sub_resource type="ParticlesMaterial" id=2]
spread = 39.25
gravity = Vector3( 0, 3, 0 )
initial_velocity = 5.0
scale = 0.5
color = Color( 0.298039, 0.690196, 0.592157, 1 )

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 0.105882, 0.631373, 0.835294, 1 )

[sub_resource type="QuadMesh" id=4]
material = SubResource( 3 )

[node name="Flamethrower" type="Spatial"]
script = ExtResource( 2 )

[node name="Hitbox" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Hitbox"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 6.08153, 0, 0 )
shape = SubResource( 1 )

[node name="salam" parent="." instance=ExtResource( 1 )]
transform = Transform( -0.1, 0, -3.25841e-08, 0, 0.1, 0, 3.25841e-08, 0, -0.1, -2.19171, 0, 0 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="Particles" type="Particles" parent="."]
transform = Transform( 2.9807, 0, 0, 0, 1.7, 0, 0, 0, 1.5, 1.02213, 0, 0 )
layers = 2
emitting = false
amount = 200
lifetime = 0.7
randomness = 1.0
visibility_aabb = AABB( -4.78421, -1.01684, -0.801798, 9.56843, 2.03367, 1.6036 )
process_material = SubResource( 2 )
draw_pass_1 = SubResource( 4 )

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
